@@ -1,3 +1,9 @@
+*redmine_git_hosting-0.7.5 (16 Jul 2014)
+
+  16 Jul 2014; Manuel Rüger <mrueg@gentoo.org>
+  +redmine_git_hosting-0.7.5.ebuild:
+  [www-apps/redmine_git_hosting] Version bump.
+
 *redmine_git_hosting-0.7.4 (06 Jul 2014)
 
   06 Jul 2014; Manuel Rüger <mrueg@gentoo.org>
